# pdm-config

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
pdm_config/: __main__.py
pdm_config/config/: __init__.py  config.py  config.toml  read_config.py
tests/: conftest.py  test_config.py
